--- a/dvach-browser/Controllers/Captcha/DVBDvachCaptchaViewController.xib
+++ b/dvach-browser/Controllers/Captcha/DVBDvachCaptchaViewController.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="landscape">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DVBDvachCaptchaViewController">
@@ -16,11 +20,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hkO-hh-9Ak">
-                    <rect key="frame" x="250" y="180" width="100" height="30"/>
+                    <rect key="frame" x="448" y="75" width="100" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="bUN-JX-ilY"/>
                     </constraints>
@@ -28,7 +32,7 @@
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Og0-le-AgK">
-                    <rect key="frame" x="269" y="215" width="61" height="38"/>
+                    <rect key="frame" x="467.5" y="110" width="61" height="38"/>
                     <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
                     <state key="normal" title="OK"/>
                     <connections>
@@ -36,7 +40,7 @@
                     </connections>
                 </button>
                 <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UWj-WJ-OzN">
-                    <rect key="frame" x="210" y="80" width="180" height="80"/>
+                    <rect key="frame" x="20" y="50" width="180" height="80"/>
                     <subviews>
                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="j3G-9f-kVM">
                             <rect key="frame" x="80" y="30" width="20" height="20"/>
@@ -52,7 +56,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="grI-hk-wBQ" firstAttribute="top" secondItem="UWj-WJ-OzN" secondAttribute="top" id="0tk-TV-1X8"/>
                         <constraint firstAttribute="bottom" secondItem="grI-hk-wBQ" secondAttribute="bottom" id="6N8-nL-UtX"/>
@@ -69,16 +73,40 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="hkO-hh-9Ak" firstAttribute="top" secondItem="UWj-WJ-OzN" secondAttribute="bottom" constant="20" id="30w-lY-YjU"/>
+                <constraint firstAttribute="trailing" secondItem="hkO-hh-9Ak" secondAttribute="trailing" constant="20" id="3He-aW-CE0"/>
+                <constraint firstItem="hkO-hh-9Ak" firstAttribute="centerY" secondItem="UWj-WJ-OzN" secondAttribute="centerY" id="9Tz-hm-rJu"/>
                 <constraint firstItem="UWj-WJ-OzN" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="D14-AJ-J9g"/>
-                <constraint firstItem="Og0-le-AgK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Lxp-4B-9kC"/>
+                <constraint firstItem="UWj-WJ-OzN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="NMr-Qc-huV"/>
                 <constraint firstItem="Og0-le-AgK" firstAttribute="top" secondItem="hkO-hh-9Ak" secondAttribute="bottom" constant="5" id="X3c-c4-5dC"/>
+                <constraint firstItem="Og0-le-AgK" firstAttribute="centerX" secondItem="hkO-hh-9Ak" secondAttribute="centerX" id="eF2-wN-U9W"/>
                 <constraint firstItem="hkO-hh-9Ak" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="isb-DT-Wsa"/>
+                <constraint firstItem="UWj-WJ-OzN" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="l5n-qL-xXG"/>
                 <constraint firstItem="UWj-WJ-OzN" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="lSC-NF-9IN"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Og0-le-AgK" secondAttribute="bottom" constant="5" id="u7y-km-M91"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="NMr-Qc-huV"/>
+                    <exclude reference="l5n-qL-xXG"/>
+                    <exclude reference="3He-aW-CE0"/>
+                    <exclude reference="9Tz-hm-rJu"/>
+                </mask>
+            </variation>
+            <variation key="heightClass=compact-widthClass=compact">
+                <mask key="constraints">
+                    <exclude reference="D14-AJ-J9g"/>
+                    <include reference="NMr-Qc-huV"/>
+                    <include reference="l5n-qL-xXG"/>
+                    <exclude reference="lSC-NF-9IN"/>
+                    <exclude reference="30w-lY-YjU"/>
+                    <include reference="3He-aW-CE0"/>
+                    <include reference="9Tz-hm-rJu"/>
+                    <exclude reference="isb-DT-Wsa"/>
+                </mask>
+            </variation>
         </view>
     </objects>
 </document>
